[project]
name = "agno-introduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.5",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "google-genai>=1.26.0",
    "openai>=1.97.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
